# cpp-boilerplate

./: CMakeLists.txt  Makefile  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  gtest.cpp  sample1_test.cpp
